# 2401-mailbox-sensor

./: .gitignore  README.md
2401-pcb/: .gitignore  2401-pcb-cache.lib  2401-pcb-rescue.lib  2401-pcb.kicad_pcb  2401-pcb.pro  2401-pcb.sch  2401-pcb.xlsx  design-calculations.xls  pinMapping_stm32g070cb.xlsx  sym-lib-table
all_peripheral_test/: Cargo.toml  bmp.gdb  flash.sh
all_peripheral_test/.cargo/: config
all_peripheral_test/src/: main.rs
analyse/: Brievenbus analyse.ipynb  Pipfile
blinky/: Cargo.toml
blinky/src/: main.rs
brievenbusdetector/: Cargo.toml  README.md  bmp.gdb
brievenbusdetector/src/: counter.rs  detector.rs  log_storage.rs  main.rs  sensors.rs
pcb1-bsp/: Cargo.toml
pcb1-bsp/examples/: blinky.rs
pcb1-bsp/src/: lib.rs
sensorlogger/: Cargo.toml
sensorlogger/src/: log_storage.rs  main.rs  sensors.rs
