[package]
name = "all_peripheral_test"
version = "0.1.0"
authors = ["Ingmar Jager <ingmarjager@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
nb = "0.1.2"
lis3dh = "0.1.0"
spi-memory = "0.1.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32g0xx-hal]
features = ["stm32g07x", "rt"]
version = "0.0.7"


[profile.dev]
opt-level = 0
debug = true
codegen-units = 1 # better optimizations
