[package]
name = "brievenbusdetector"
version = "0.1.0"
authors = ["Ingmar Jager <ingmarjager@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
nb = "0.1.2"
spi-memory = "0.2.0"
vl6180x = {git="https://github.com/devboard-io/vl6180x-rs"}
heapless = "0.5.5"
postcard = "0.5.0"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32g0xx-hal]
features = ["stm32g07x", "rt"]
version = "0.0.8"

[dependencies.num]
version ="0.2.1"
default-features = false

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 's'
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations



[features]
use_flash = []
full_erase = []