[package]
name = "sensorlogger"
version = "0.1.0"
authors = ["Ingmar Jager <ingmarjager@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
nb = "0.1.2"
dps422 = "0.1.1"
lis3dh = "0.1.0"
spi-memory = "0.2.0"
shared-bus = {version="0.1.4", features=["cortexm"]}
vl6180x = {git="https://github.com/devboard-io/vl6180x-rs"}
heapless = "0.5.5"
postcard = "0.5.0"

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32g0xx-hal]
features = ["stm32g07x", "rt"]
git = "https://github.com/stm32-rs/stm32g0xx-hal.git#master"

[profile.dev]
opt-level = 's'
debug = true